[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vanderbilt-entro-client"
version = "0.0.1"
authors = [
  { name="Dag Heyman Kajevic", email="d-h-k@hey.com" },
]
description = "Alternative client for Vanderbilt Entro Reservation system"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests"]

[project.urls]
"Homepage" = "https://github.com/dagheyman/vanderbilt-entro-client"
"Bug Tracker" = "https://github.com/dagheyman/vanderbilt-entro-client/issues"
